# Makefile.am for jtrain html documentation
# Guido Scholz
# last update: 06.10.2004

htmldir = @HTMLDIR@

dist_html_DATA = \
	helpstart.htm \
	jt_1.htm \
	jt_2.htm \
	jt_3.htm \
	jt_31.htm \
	jt_32.htm \
	jt_33.htm \
	jt_34.htm \
	jt_35.htm \
	jt_36.htm \
	jt_37.htm \
	jt_4.htm \
	jt_5.htm \
	jt_6.htm \
	jt_7.htm \
	jt_8.htm \
	jt_9.htm

